# Mlops-platzi

./: .gitignore  DockerFile  Dockerfile  README.md  backend.db  docker-compose.yml  mlflow.db  model.pkl  pyproject.toml  requirements.txt  script-install-docker.sh
app/: config.py  count_vectorizer.pkl  db.py  main.py  prestart.sh  utils.py
config/: grafana_datasources.yaml
config_env/: README.md
monitoring/: baseline_model_ticket_classifier.ipynb  bert_model.ipynb  introduction_monitoring.ipynb
monitoring/data/: reference.parquet
orchestration/: config.py  feature_extraction.py  orchestrate_with_prefect.py  orchestration_pro.py  text_processing.py  utils.py
orchestration/data/data_processed/: count_vectorizer.pkl  model_lr.pkl  test.pkl
orchestration/data/data_raw/: green_tripdata_2023-02.parquet
orchestration/introduction/: run_iris.py  run_prefect.py
orchestration/workflow/: mlflow.db  orchestrate.py
src/app/: app.py
src/app/model/: model_utils.py
src/app/model/data/data_preprocessed/: topic_mapping_1.json
src/app/utils/: preprocessing_utils.py
tracking/: introduction_mlflow.ipynb  mlflow_con_aws.md  tracking_data_tickets_baseline.ipynb  tracking_models.ipynb
tracking/data/data_processed/: count_vectorizer.pkl  dv.pkl  label_mapping.json  test.pkl
tracking/data/data_raw/: green_tripdata_2023-03.parquet
utils/: data_processing_duration_pred.py  feature_extraction.py  textprocessing.py
