[tool.poetry]
name = "mlops-curso"
version = "0.1.0"
description = ""
authors = ["Maria Durango <camiladurangob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.8.0"
ipython = "^8.17.2"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
xgboost = "^2.0.2"
hyperopt = "^0.2.7"
prefect = "^2.14.5"
nltk = "^3.8.1"
wordcloud = "^1.9.2"
transformers = "^4.35.2"
torch = "^2.1.1"
boto3 = "^1.33.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
